--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,12 @@
-<h1>EAT DA BURGER!</h1>
+<div id="home">
+
+<h1 id="title">EAT DA BURGER!</h1>
 
 <h2>Uneaten burgers</h2>
 
 <ul>
   {{#each burgers}}
-    {{#unless devoured}}
+    {{#unless this.devoured}}
       {{> burgers/burger-block devoured=true}}
     {{/unless}}
   {{/each}}
@@ -31,3 +33,4 @@
 
   <button type="submit">Add Burger</button>
 </form>
+</div>
